[tool.poetry]
name = "bloggerproject"
version = "0.1.0"
description = ""
authors = ["Russell Tran <tranrl@stanford.edu>"]

[tool.poetry.dependencies]
python = "^3.9"
PyYAML = "^6.0.1"
typer = "^0.9.0"
feedparser = "^6.0.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
